fix streak box spacing

--- a/public/css/application.css
+++ b/public/css/application.css
@@ -1,4 +1,5 @@
-#streak {
+.streak-box {
+  padding: 10px;
 }
 
 .streak {
@@ -7,6 +8,7 @@
   border: 3px solid black;
   display: inline-block;
   position: relative;
+  margin-left: 5px;
 }
 
 .glyphicon {
@@ -25,7 +27,6 @@
 
 .container h1 {
   font-size: 17pt;
-
 }
 
 .timestamp {
